# RBOT

./: .clang-format  .gitignore  CMakeLists.txt  RBOT  meson.build  tasks.py
data/: ship-hull.ply
src/: Arguments.cpp  Arguments.hpp  Pose.hpp  Recording.cpp  Recording.hpp  main.cpp  model.cpp  model.h  object3d.cpp  object3d.h  optimization_engine.cpp  optimization_engine.h  pose_estimator6d.cpp  pose_estimator6d.h  rbot.cpp  rendering_engine.cpp  rendering_engine.h  shm.hpp  shmvideo.cpp  signed_distance_transform2d.cpp  signed_distance_transform2d.h  tclc_histograms.cpp  tclc_histograms.h  template_view.cpp  template_view.h  transformations.cpp  transformations.h  video.cpp  video.hpp
test/: test.cpp
